Add new command workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,5 +1,5 @@
 name: Say hello
-'on':
+"on":
   push:
     branches:
       - main
@@ -9,4 +9,8 @@ jobs:
     steps:
       - name: Echo the message
         run: |
-          echo "Hola Midu"
+          echo "Hola Juan"
+
+      - name: Dime la fecha
+        run: date
+      - run: ls -l
