--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -1,9 +1,7 @@
 name: Deployment Pipeline
-
-on:
+'on':
   push:
-    branches: -main
-
+    branches: '-main'
 jobs:
   deploy:
     runs-on: ubuntu-20.04
