--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,16 +1,18 @@
-name: Say hello
+name: Deployment Pipeline
 on:
   push:
-    branches:
-      - main
+    branches: '-main'
 jobs:
-  hello_world:
+  deploy:
     runs-on: ubuntu-20.04
     steps:
-      - name: Echo the message
-        run: |
-          echo "Hola Juan"
-
-      - name: Dime la fecha
-        run: date
-      - run: ls -l
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 14
+      - name: install dependencies
+        run: npm install
+      - name: lint
+        run: npm run eslint
