--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -11,9 +11,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
-          cache: 'npm'
           node-version: '14'
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Lint
         run: npm run eslint
