--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -10,10 +10,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "14"
-      - name: Install dependencies
-        run: npm install
-      - name: Lint
-        run: npm run eslint
+      - name: Dime la fecha
+        run: date
+      - run: ls -l
+
+          
+      # - uses: actions/setup-node@v4
+      #   with:
+      #     node-version: "14"
+      # - name: Install dependencies
+      #   run: npm install
+      # - name: Lint
+      #   run: npm run eslint
