add eslint support

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -20,6 +20,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "14"
+      - name: Install dependencies
+        run: npm install
+      - name: Lint
+        run: npm run eslint
+
       - name: Dime la fecha
         run: date
-      - run: ls -l
+      - name: List Directory
+        run: ls -l
