--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: 
-
+        run: npm run eslint
+        
       - name: Dime la fecha
         run: date
       - name: List Directory
