--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: "14"
       - name: Install dependencies
         run: npm install --no-audit --no-fund --no-optional
-      - name: Lint
+      - name: lint
         run: npm run eslint
       - name: build
         run: npm run build
