--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -24,8 +24,8 @@ jobs:
           node-version: "14"
       - name: Install dependencies
         run: npm ci
-      - name: lint
-        run: npm run eslint
+      # - name: lint
+      #   run: npm run eslint
       - name: build
         run: npm run build
       - name: test
