--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -27,18 +27,21 @@ jobs:
           node-version: "14"
       - name: Install dependencies
         run: npm ci
+
       - name: lint
         run: npm run eslint
+
       - name: build
         run: npm run build
+        
       - name: test
         run: npm test
-      - name: E2E Test
-        uses: cypress-io/github-action@v6
-        with:
-          command: npm run test:e2e
-          start: npm run start-test
-          wait-on: http://localhost:5000
+      # - name: E2E Test
+      #   uses: cypress-io/github-action@v6
+      #   with:
+      #     command: npm run test:e2e
+      #     start: npm run start-test
+      #     wait-on: http://localhost:5000
 
       - name: Deploy to Heroku
         if: ${{github.event_name =='push'}}
